Fixes Remote execution cell layout on Safari

--- a/assets/remote_execution_cell/src/main.css
+++ b/assets/remote_execution_cell/src/main.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Safari 11+ */
+
+@supports (-webkit-appearance: none) and (stroke-color: transparent) {
+  input[type="text"] {
+    max-width: 220px;
+  }
+}
